<resources>
    <string name="app_name">SolArduino</string>
    <string name="auto">AUTO</string>
    <string name="pingmenu">Ping</string>
    <string name="upbuttondescription">Button Up</string>
    <string name="downbuttondescription">Button Down</string>
    <string name="change_angle_button_description">Move panels to %1$d°</string>
    <string name="initialdegrees" translatable="false">…</string>
    <string name="angle" translatable="false">%1$d°</string>
    <string name="imagepaneldescription">Solar Panel</string>
    <string name="setanglebutton">Set angle</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="emergency_reset">Reset emergency</string>
</resources>
