<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:orientation="vertical">
                <TableRow>
                    <TextView
                        android:id="@+id/currentAngle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:textSize="80sp"
                        android:text="@string/initialdegrees"
                        android:textColor="@drawable/text_selector"/>
                </TableRow>
                <TableRow
                    android:gravity="center">
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="invisible"
                        />
                    <CheckBox
                        android:id="@+id/autoBox"
                        android:layout_width="wrap_content"
                        android:text="@string/auto"/>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="0dp"
                android:layout_weight="1">

                <TableRow>
                    <com.abbyberkers.solarduino.ui.components.AccessibilityImageButton
                        android:id="@+id/upButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/up_button"
                        android:background="#00000000"
                        android:contentDescription="@string/upbuttondescription" />

                </TableRow>
                <TableRow>
                    <com.abbyberkers.solarduino.ui.components.AccessibilityImageButton
                        android:id="@+id/downButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/down_button"
                        android:background="#00000000"
                        android:contentDescription="@string/downbuttondescription" />
                </TableRow>

            </TableLayout>

        </TableRow>
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/table"
            android:orientation="horizontal">
            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:max="52"
                android:translationX="-100dp"
                android:translationY="125dp"
                android:rotation="270"/>
            <ImageView
                android:id="@+id/linePanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:scaleType="fitXY"
                android:src="@drawable/panel"
                android:contentDescription="@string/imagepaneldescription" />
        </FrameLayout>

        <Button
            android:id="@+id/setAngle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame"
            android:text="@string/setanglebutton"/>

    </RelativeLayout>
</ScrollView>